Fix native builder image name for CLI.
Using the "mandrel" builder image type name results in the Quarkus
2.13.6 Maven plugin trying to use the
"quay.io/quarkus/ubi-quarkus-mandrel:22.3-java17 image" for building
native executables. However, this tag has been (accidentally?) deleted
from the quay.io repository.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>